[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-rr"
version = "0.1.1"
description = "A universal MQTT request-response library with optional username/password, client_id, and timeouts."
readme = "README.md"
authors = [
  { name="Your Name", email="your@email.com" }
]

keywords = ["MQTT", "request-response", "publish-subscribe", "paho-mqtt"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "paho-mqtt>=1.6.1"
]
requires-python = ">=3.7"

[project.urls]
"Source Code" = "https://github.com/thinkcz/mqtt-rr"
"Documentation" = "https://github.com/thinkcz/mqtt-rr"
